<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="160dp">
        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <EditText
            android:id="@+id/edTCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Correo"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="137dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/edTContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Contraseña"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="63dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <EditText
            android:id="@+id/edTNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Nombre"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="295dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <EditText
            android:id="@+id/edTApellidoP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/apellidoP"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="384dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <EditText
            android:id="@+id/edTApellidoM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/apellidoM"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="214dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <EditText
            android:id="@+id/edTtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text|number"
            android:hint="@string/Telefono"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="470dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/btn_registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_registrarse"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="619dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>